<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followus"
        android:textColor="@color/ca_blue"
        android:alpha=".87"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/facebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector_transparent_5_black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".87"
                android:text="@string/facebook"
                android:textColor="@color/ca_blue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/telegram"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/list_selector_transparent_5_black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/telegram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".87"
                android:text="@string/telegram"
                android:textColor="@color/ca_blue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/youtube"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/list_selector_transparent_5_black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/youtube" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".87"
                android:text="@string/youtube"
                android:textColor="@color/ca_blue"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/list_selector_transparent_5_black">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/instagram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".87"
                android:text="@string/instagram"
                android:textColor="@color/ca_blue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linkedin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/list_selector_transparent_5_black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/linkedin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".87"
                android:text="@string/linkedin"
                android:textColor="@color/ca_blue"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/twitter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/list_selector_transparent_5_black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/twitter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".87"
                android:text="@string/twitter"
                android:textColor="@color/ca_blue"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:textColor="@color/ca_blue"
        android:alpha=".87"
        android:layout_gravity="right"/>

</LinearLayout>