<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_above="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <View
        android:id="@+id/footerShadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:visibility="gone"
        android:background="@drawable/shadow_bottom"
        android:layout_above="@id/footer"/>
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/promoCoupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="coupon"
            android:paddingBottom="5dp"
            android:textSize="14sp"
            android:textColor="@color/ca_blue"
            android:alpha=".87"
            android:visibility="gone"/>
        <RelativeLayout
            android:id="@+id/promoCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <EditText
                android:id="@+id/promoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promo_code_title"
                android:singleLine="true"
                android:textColor="@color/ca_blue"
                android:alpha=".87"
                android:layout_toLeftOf="@+id/rightLayout"
                android:layout_marginRight="8dp"
                android:padding="10dp"
                android:imeOptions="actionDone"
                android:textSize="14sp"
                android:background="@drawable/edit_box_style"/>
            <LinearLayout
                android:id="@+id/rightLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/applyPromoCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="apply"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_green_rounded"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
                <TextView
                    android:id="@+id/offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Offer"
                    android:layout_marginLeft="4dp"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_blue_rounded_10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/appliedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:id="@+id/AppliedpromoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/ca_blue"
                android:alpha=".87"
                android:textSize="14sp"
                android:background="@drawable/edit_box_style"/>
            <ImageView
                android:id="@+id/removeCode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="6dp"
                android:src="@drawable/baseline_cancel_white_24"
                android:tint="@color/colorPrimary"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textSize="14sp"
                android:textColor="@color/ca_blue"
                android:alpha=".87"/>
            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/discount"
                android:textSize="14sp"
                android:textColor="@color/ca_blue"
                android:alpha=".87"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="14sp"
                android:textColor="@color/ca_blue"
                android:alpha=".87"/>
            <TextView
                android:id="@+id/gst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/gst"
                android:textSize="14sp"
                android:textColor="@color/ca_blue"
                android:alpha=".87"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/payAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_amount"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/ca_blue"
                android:alpha=".87"/>
            <TextView
                android:id="@+id/payButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green_rounded"
                android:layout_alignParentRight="true"
                android:text="@string/proceed_to_pay"
                android:textSize="14sp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAllCaps="true"
                android:paddingRight="16dp"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressBar">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/noItemLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ca_blue"
            android:alpha=".87"
            android:text="@string/no_cart_item"
            android:layout_centerInParent="true"
            android:textSize="16sp"/>
    </RelativeLayout>
</RelativeLayout>